# dbgm

./: README.md
Inc/: dbgm.h
Src/: dbgm.c
gtest/: CMakeLists.txt  test.cpp  test.sh
